fixed padding error on App.scss and added z-indexes to prevent image overlapping hero text

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,7 @@
 }
 @media screen and (max-width: 1375px) {
   .app {
-    padding: 20px 0px;
+    padding: 20px 100px;
   }
 }
 
