--- a/src/components/hero/hero.styles.scss
+++ b/src/components/hero/hero.styles.scss
@@ -8,6 +8,7 @@
   .heroText {
     display: flex;
     flex-direction: column;
+    z-index: 3;
 
     .aboveText {
       letter-spacing: 5px;
@@ -74,6 +75,7 @@
     justify-content: flex-end;
     align-self: flex-end;
     margin-left: 200px;
+    z-index: 2;
 
     img {
       height: 85vh;
